distros/U/URI-XS/src/panda/uri/parser.cc

#line 1 "src/panda/uri/parser.rl"
#include "URI.h"

namespace panda { namespace uri {

// ============== RFC3986 compliant parser ===================


#line 11 "src/panda/uri/parser.cc"
static const int uri_parser_start = 171;
static const int uri_parser_first_final = 171;
static const int uri_parser_error = 0;

static const int uri_parser_en_uri = 171;


#line 94 "src/panda/uri/parser.rl"


#define SAVE(dest)  dest = str.substr(mark, p - ps - mark);
#define NSAVE(dest) dest = acc; acc = 0

void URI::parse (const string& str) {
    const char* ps  = str.data();
    const char* p   = ps;
    const char* pe  = p + str.length();
    const char* eof = pe;
    int         cs  = uri_parser_start;
    size_t      mark;
    int acc = 0;
    bool authority_has_pct = false;
    
    
#line 36 "src/panda/uri/parser.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 171:
	switch( (*p) ) {
		case 33: goto tr172;
		case 35: goto st173;
		case 37: goto tr174;
		case 47: goto tr175;
		case 59: goto tr172;
		case 61: goto tr172;
		case 63: goto st176;
		case 64: goto tr172;
		case 95: goto tr172;
		case 126: goto tr172;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 57 )
			goto tr172;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr177;
	} else
		goto tr177;
	goto st0;
st0:
cs = 0;
	goto _out;
tr172:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st172;
st172:
	if ( ++p == pe )
		goto _test_eof172;
case 172:
#line 77 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto st172;
		case 35: goto tr178;
		case 37: goto st3;
		case 47: goto st175;
		case 59: goto st172;
		case 61: goto st172;
		case 63: goto tr180;
		case 95: goto st172;
		case 126: goto st172;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 57 )
			goto st172;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st172;
	} else
		goto st172;
	goto st0;
tr178:
#line 23 "src/panda/uri/parser.rl"
	{ SAVE(_path); }
	goto st173;
tr186:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 24 "src/panda/uri/parser.rl"
	{ SAVE(_qstr); }
	goto st173;
tr188:
#line 24 "src/panda/uri/parser.rl"
	{ SAVE(_qstr); }
	goto st173;
tr192:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 20 "src/panda/uri/parser.rl"
	{ SAVE(_host); }
#line 23 "src/panda/uri/parser.rl"
	{ SAVE(_path); }
	goto st173;
tr199:
#line 20 "src/panda/uri/parser.rl"
	{ SAVE(_host); }
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 23 "src/panda/uri/parser.rl"
	{ SAVE(_path); }
	goto st173;
tr204:
#line 21 "src/panda/uri/parser.rl"
	{ NSAVE(_port); }
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 23 "src/panda/uri/parser.rl"
	{ SAVE(_path); }
	goto st173;
st173:
	if ( ++p == pe )
		goto _test_eof173;
case 173:
#line 148 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto tr181;
		case 37: goto tr182;
		case 61: goto tr181;
		case 95: goto tr181;
		case 126: goto tr181;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr181;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr181;
	} else
		goto tr181;
	goto st0;
tr181:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st174;
st174:
	if ( ++p == pe )
		goto _test_eof174;
case 174:
#line 175 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto st174;
		case 37: goto st1;
		case 61: goto st174;
		case 95: goto st174;
		case 126: goto st174;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st174;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st174;
	} else
		goto st174;
	goto st0;
tr182:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 202 "src/panda/uri/parser.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st2;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st2;
	} else
		goto st2;
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st174;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st174;
	} else
		goto st174;
	goto st0;
tr174:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 235 "src/panda/uri/parser.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st4;
	} else
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st172;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st172;
	} else
		goto st172;
	goto st0;
tr216:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st175;
tr194:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 20 "src/panda/uri/parser.rl"
	{ SAVE(_host); }
	goto st175;
tr201:
#line 20 "src/panda/uri/parser.rl"
	{ SAVE(_host); }
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st175;
tr205:
#line 21 "src/panda/uri/parser.rl"
	{ NSAVE(_port); }
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st175;
st175:
	if ( ++p == pe )
		goto _test_eof175;
case 175:
#line 292 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto st175;
		case 35: goto tr178;
		case 37: goto st5;
		case 61: goto st175;
		case 63: goto tr180;
		case 95: goto st175;
		case 126: goto st175;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st175;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st175;
	} else
		goto st175;
	goto st0;
tr217:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 321 "src/panda/uri/parser.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st6;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st6;
	} else
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st175;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st175;
	} else
		goto st175;
	goto st0;
tr180:
#line 23 "src/panda/uri/parser.rl"
	{ SAVE(_path); }
	goto st176;
tr196:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 20 "src/panda/uri/parser.rl"
	{ SAVE(_host); }
#line 23 "src/panda/uri/parser.rl"
	{ SAVE(_path); }
	goto st176;
tr203:
#line 20 "src/panda/uri/parser.rl"
	{ SAVE(_host); }
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 23 "src/panda/uri/parser.rl"
	{ SAVE(_path); }
	goto st176;
tr207:
#line 21 "src/panda/uri/parser.rl"
	{ NSAVE(_port); }
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 23 "src/panda/uri/parser.rl"
	{ SAVE(_path); }
	goto st176;
st176:
	if ( ++p == pe )
		goto _test_eof176;
case 176:
#line 382 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto tr185;
		case 35: goto tr186;
		case 37: goto tr187;
		case 61: goto tr185;
		case 95: goto tr185;
		case 126: goto tr185;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr185;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr185;
	} else
		goto tr185;
	goto st0;
tr185:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st177;
st177:
	if ( ++p == pe )
		goto _test_eof177;
case 177:
#line 410 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto st177;
		case 35: goto tr188;
		case 37: goto st7;
		case 61: goto st177;
		case 95: goto st177;
		case 126: goto st177;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st177;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st177;
	} else
		goto st177;
	goto st0;
tr187:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 438 "src/panda/uri/parser.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st8;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st8;
	} else
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st177;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st177;
	} else
		goto st177;
	goto st0;
tr175:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st178;
st178:
	if ( ++p == pe )
		goto _test_eof178;
case 178:
#line 471 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto st175;
		case 35: goto tr178;
		case 37: goto st5;
		case 47: goto st179;
		case 61: goto st175;
		case 63: goto tr180;
		case 95: goto st175;
		case 126: goto st175;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st175;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st175;
	} else
		goto st175;
	goto st0;
st179:
	if ( ++p == pe )
		goto _test_eof179;
case 179:
	switch( (*p) ) {
		case 33: goto tr191;
		case 35: goto tr192;
		case 37: goto tr193;
		case 47: goto tr194;
		case 58: goto tr195;
		case 61: goto tr191;
		case 63: goto tr196;
		case 64: goto tr197;
		case 91: goto tr198;
		case 95: goto tr191;
		case 126: goto tr191;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr191;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr191;
	} else
		goto tr191;
	goto st0;
tr191:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st180;
st180:
	if ( ++p == pe )
		goto _test_eof180;
case 180:
#line 527 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto st180;
		case 35: goto tr199;
		case 37: goto tr200;
		case 47: goto tr201;
		case 58: goto tr202;
		case 61: goto st180;
		case 63: goto tr203;
		case 64: goto tr13;
		case 95: goto st180;
		case 126: goto st180;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st180;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st180;
	} else
		goto st180;
	goto st0;
tr200:
#line 27 "src/panda/uri/parser.rl"
	{ authority_has_pct = true; }
	goto st9;
tr193:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 27 "src/panda/uri/parser.rl"
	{ authority_has_pct = true; }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 565 "src/panda/uri/parser.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st10;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st10;
	} else
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st180;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st180;
	} else
		goto st180;
	goto st0;
tr195:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 20 "src/panda/uri/parser.rl"
	{ SAVE(_host); }
	goto st181;
tr202:
#line 20 "src/panda/uri/parser.rl"
	{ SAVE(_host); }
	goto st181;
tr206:
#line 14 "src/panda/uri/parser.rl"
	{
        acc *= 10;
        acc += *p - '0';
    }
	goto st181;
st181:
	if ( ++p == pe )
		goto _test_eof181;
case 181:
#line 611 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto st11;
		case 35: goto tr204;
		case 37: goto tr12;
		case 47: goto tr205;
		case 61: goto st11;
		case 63: goto tr207;
		case 64: goto tr13;
		case 95: goto st11;
		case 126: goto st11;
	}
	if ( (*p) < 58 ) {
		if ( (*p) > 46 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr206;
		} else if ( (*p) >= 36 )
			goto st11;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st11;
		} else if ( (*p) >= 65 )
			goto st11;
	} else
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	switch( (*p) ) {
		case 33: goto st11;
		case 37: goto tr12;
		case 61: goto st11;
		case 64: goto tr13;
		case 95: goto st11;
		case 126: goto st11;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto st11;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st11;
		} else if ( (*p) >= 65 )
			goto st11;
	} else
		goto st11;
	goto st0;
tr12:
#line 27 "src/panda/uri/parser.rl"
	{ authority_has_pct = true; }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 670 "src/panda/uri/parser.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st13;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st13;
	} else
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st11;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st11;
	} else
		goto st11;
	goto st0;
tr13:
#line 22 "src/panda/uri/parser.rl"
	{ SAVE(_user_info); }
	goto st182;
tr197:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 22 "src/panda/uri/parser.rl"
	{ SAVE(_user_info); }
	goto st182;
st182:
	if ( ++p == pe )
		goto _test_eof182;
case 182:
#line 709 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto tr208;
		case 35: goto tr192;
		case 37: goto tr209;
		case 47: goto tr194;
		case 58: goto tr210;
		case 61: goto tr208;
		case 63: goto tr196;
		case 91: goto tr198;
		case 95: goto tr208;
		case 126: goto tr208;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr208;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr208;
	} else
		goto tr208;
	goto st0;
tr208:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st183;
st183:
	if ( ++p == pe )
		goto _test_eof183;
case 183:
#line 741 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 33: goto st183;
		case 35: goto tr199;
		case 37: goto tr211;
		case 47: goto tr201;
		case 58: goto tr212;
		case 61: goto st183;
		case 63: goto tr203;
		case 95: goto st183;
		case 126: goto st183;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st183;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st183;
	} else
		goto st183;
	goto st0;
tr211:
#line 27 "src/panda/uri/parser.rl"
	{ authority_has_pct = true; }
	goto st14;
tr209:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 27 "src/panda/uri/parser.rl"
	{ authority_has_pct = true; }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 778 "src/panda/uri/parser.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st15;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st15;
	} else
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st183;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st183;
	} else
		goto st183;
	goto st0;
tr210:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
#line 20 "src/panda/uri/parser.rl"
	{ SAVE(_host); }
	goto st184;
tr212:
#line 20 "src/panda/uri/parser.rl"
	{ SAVE(_host); }
	goto st184;
tr213:
#line 14 "src/panda/uri/parser.rl"
	{
        acc *= 10;
        acc += *p - '0';
    }
	goto st184;
st184:
	if ( ++p == pe )
		goto _test_eof184;
case 184:
#line 824 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 35: goto tr204;
		case 47: goto tr205;
		case 63: goto tr207;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr213;
	goto st0;
tr198:
#line 10 "src/panda/uri/parser.rl"
	{
        mark = p - ps;
    }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 843 "src/panda/uri/parser.cc"
	switch( (*p) ) {
		case 58: goto st152;
		case 118: goto st167;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st17;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st17;
	} else
		goto st17;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( (*p) == 58 )
		goto st21;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st18;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st18;
	} else
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( (*p) == 58 )
		goto st21;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st19;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st19;
	} else
		goto st19;
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 58 )
		goto st21;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st20;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st20;
	} else
		goto st20;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	if ( (*p) == 58 )
		goto st21;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) == 58 )
		goto st138;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st22;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st22;
	} else
		goto st22;
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	if ( (*p) == 58 )
		goto st26;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st23;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st23;
	} else
		goto st23;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) == 58 )
		goto st26;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st24;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st24;
	} else
		goto st24;
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) == 58 )
		goto st26;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st25;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st25;
	} else
		goto st25;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) == 58 )
		goto st26;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( (*p) == 58 )
		goto st124;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st27;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st27;
	} else
		goto st27;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 58 )
		goto st31;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st28;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st28;
	} else
		goto st28;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 58 )
		goto st31;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st29;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st29;
	} else
		goto st29;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	if ( (*p) == 58 )
		goto st31;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st30;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st30;
	} else
		goto st30;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 58 )
		goto st31;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( (*p) == 58 )
		goto st110;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st32;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st32;
	} else
		goto st32;
	goto st0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	if ( (*p) == 58 )
		goto st36;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st33;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st33;
	} else
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) == 58 )
		goto st36;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st34;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st34;
	} else
		goto st34;
	goto st0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	if ( (*p) == 58 )
		goto st36;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st35;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st35;
	} else
		goto st35;
	goto st0;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	if ( (*p) == 58 )
		goto st36;
	goto st0;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	if ( (*p) == 58 )
		goto st96;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st37;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st37;
	} else
		goto st37;
	goto st0;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	if ( (*p) == 58 )
		goto st41;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
